fix bounding of zoom control and z-index issue

--- a/cdap-ui/app/directives/dag/my-dag.less
+++ b/cdap-ui/app/directives/dag/my-dag.less
@@ -20,7 +20,7 @@
 
 my-dag {
   .zoom-control {
-    z-index: 1500;
+    z-index: 1020;
     position: absolute;
     right: 10px;
     top: 5px;
